# skillguard

./: .gitignore  .safeskill.yml  .skillguard.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  RELEASE.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  safeskill.py  setup.py  skillguard.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  security-scan.yml  test.yml  tests.yml
examples/dangerous-skill/: SKILL.md  config.py  install.sh
tests/: test_safeskill.py  test_skillguard.py
web/: index.html
